# asteroids

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  asteroid.py  circleshape.py  constants.py  main.py  player.py  pyproject.toml  shot.py
.github/workflows/: release.yml  tests.yml
game/config/: constants.py
game/core/: circleshape.py
game/entities/: asteroid.py  explosion.py  player.py  shot.py
game/render/: __init__.py  asteroid_texture.py  renderer.py  startup.py
game/systems/: asteroidfield.py
game/utils/: resources.py
scripts/: release.py
tests/: conftest.py  test_asteroid.py  test_circleshape.py  test_main_session.py  test_release_script.py  test_shot.py  test_startup_screen.py
