[project]
name = "asteroids"
version = "1.1.4"
description = "The eternal classic implemented with pygame "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
